--- a/canvas1.html
+++ b/canvas1.html
@@ -23,9 +23,10 @@
             //1. creating a new shape
             //2. drawing a rectangle
             //3. filling it with colour
-            //if i wanted the outline of a rectangle then I'd need to write more explicit instructions
-            //
 
+            //if i wanted the outline of a rectangle then I'd need to write more explicit instructions
+            context.beginPath
+            //telling context I am drawing a new shape
 
 		</script>
 	</body>
