took a 12 minute video way too seriously
lots of experimentation here with understanding variables, constants, loops and arrays.

really happy to understand the basics of loops, something I've struggled with a heap previously.

--- a/2. circleInSquare.html
+++ b/2. circleInSquare.html
@@ -1,14 +1,12 @@
 <html>
     <body>
-        <h1>circle</h1>
+        <h1>circle in square</h1>
         <canvas width="600" height="600"></canvas>
 
         <script>
 
             let canvas = document.querySelector("canvas");
             let context = canvas.getContext('2d');
-
-            context.fillStyle = "blue";
 
             context.lineWidth = 4;
             context.beginPath();
